--- a/style.css
+++ b/style.css
@@ -16,7 +16,9 @@ body{
     top: 0%;
     padding: 20px 10%;
     background-color: transparent;
-     justify-content: space-between
+     justify-content: space-between;
+     z-index: 100;
+     
 }
 
 .logo{
@@ -49,26 +51,26 @@ body{
 
 }
 
-.main-content{
+.content{
     max-width: 600px;
 }
 
-.main-content h1{
+.content h1{
     font-weight: 600;
     font-size: 50px;
 }
-.main-content h3{
+.content h3{
     font-weight: 500;
     font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 30px;
     color: #00abf0; 
 }
 
-.main-content p{
+.content p{
     font-size: 18px;
 }
 
-.main-content .btn-box{
+.content .btn-box{
     display: flex;
     justify-content: space-between;
     align-items: center;
