--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
+
+
 *{
     margin: 0px;
     padding: 0px;
@@ -7,17 +12,20 @@
 }
 
 body{
-    background: #081b29;
+    /* background: #081b29; */
     color: #ededed;
 }
 .header{
-    display: flex;
+    position: fixed;
+    top: 0;
+    left: 0;
     width: 100%;
-    top: 0%;
     padding: 20px 10%;
     background-color: transparent;
-     justify-content: space-between;
-     z-index: 100;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    z-index: 100;
      
 }
 
@@ -34,7 +42,7 @@ body{
      color: #ededed;
      text-decoration: none;
      font-weight: 500;
-     margin-left: 25px;
+     margin-left: 35px;
      transition-duration: 0.3s;
 }
 
@@ -48,50 +56,157 @@ body{
     align-items: center;
     height: 100vh;
     padding: 0 10%;
+    background: url('files/home.jpg') no-repeat ;
+    background-size: cover;
+    background-position: center;
 
 }
 
-.content{
+.main-content{
     max-width: 600px;
 }
 
-.content h1{
+.main-content h1{
     font-weight: 600;
     font-size: 50px;
+    line-height: 1.2;
 }
-.content h3{
-    font-weight: 500;
-    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 30px;
+.main-content h3{
+    font-weight: 600;
+    font-size: 32px;
     color: #00abf0; 
+    font-family:"Ubuntu", sans-serif,system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-.content p{
-    font-size: 18px;
+.main-content p{
+    font-size: 20px;
+    margin: 20px 0 40px;
+    font-family: "Roboto", sans-serif;
 }
 
-.content .btn-box{
+.main-content .btn-box{
     display: flex;
     justify-content: space-between;
-    align-items: center;
-    /* background-color: yellowgreen; */
     width: 345px;
-    height:40px ;
+    height:50px ;
 }
 
-.btn-box a{
+.btn-box a {
+    position: relative;
     display: inline-flex;
     justify-content: center;
-    align-self: center;
+    align-items: center;
     width: 150px;
     height: 100%;
     background-color: #00abf0;
     border: 2px solid #00abf0;
-    border-radius:8px;
-    font-size: 18px;
+    border-radius:10px;
+    font-size: 19px;
     color: #081b29;
     text-decoration: none;
     font-weight: 600;
     letter-spacing: 1px;
+    z-index: 1;
+    overflow: hidden;
+    transition: .5s;
+}
+.btn-box a:hover{
+    color: #00abf0;
+}
+
+.btn-box a:nth-child(2) {
+    background-color: transparent;
+    color: #00abf0;
+}
+
+.btn-box a:nth-child(2):hover {
+    color: #081b29;
+}
+
+
+.btn-box a:nth-child(2)::before {
+background-color: #00abf0;
+}
+
+.btn-box a::before{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 0;
+    height: 100%;
+    background-color: #081b29;
+    z-index: -1;
+    transition: .5s;
+}
+
+.btn-box a:hover::before{
+    width: 100%;
+}
+
+.main-icons{
+position: absolute;
+bottom: 90px;
+width: 170px;
+/* background: red; */
+display: flex;
+justify-content: space-between;
+}
+
+.main-icons a{
+    position: relative;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 40px;
+    height: 40px;
+    background:transparent;
+    border: 2px solid #00abf0;
+    border-radius: 50px;
+    font-size: 20px;
+    color: #00abf0;
+    text-decoration: none;
+    z-index: 1;
+    transition: .5s;
+    overflow:hidden
+}
+
+.main-icons a:hover{
+    color: #081b29;
+}
+
+.main-icons a::before{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 0;
+    height: 100%;
+    background-color: #00abf0;
+    z-index: -1;
+    transition: .5s;
+}
+
+
+.main-icons a:hover::before{
+    color: #081b29;
+    width: 100%;
+}
+
+.main-imgHover{
+    position:absolute;
+    top: 0;
+    right: 30px;
+    width: 720px;
+    height: 100%;
+    background: transparent;
+    transition: 3s;
+
+
+}
+
+.main-imgHover:hover{
+    background: #081b29;
+    opacity: 0.8;
 }
 
